WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85024
REGRESSION (
r115163
): Unable to scroll article body with trackpad on altdevblogaday.com blog post
https://bugs.webkit.org/show_bug.cgi?id=85024
Summary
REGRESSION (r115163): Unable to scroll article body with trackpad on altdevbl...
Anders Carlsson
Reported
2012-04-26 18:24:19 PDT
REGRESSION (
r115163
): Unable to scroll article body with trackpad on altdevblogaday.com blog post
Attachments
Patch
(1.68 KB, patch)
2012-04-26 18:26 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-04-26 18:26:07 PDT
Created
attachment 139117
[details]
Patch
Anders Carlsson
Comment 2
2012-04-26 18:37:20 PDT
Committed
r115395
: <
http://trac.webkit.org/changeset/115395
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug