REGRESSION (r115163): Unable to scroll article body with trackpad on altdevblogaday.com blog post https://bugs.webkit.org/show_bug.cgi?id=85024 <rdar://problem/11330758>

Reviewed by Sam Weinig.

Fix broken logic in canHaveScrollbars.

* page/scrolling/ScrollingTreeNode.h:
(WebCore::ScrollingTreeNode::canHaveScrollbars):

Canonical link: https://commits.webkit.org/102533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115395 268f45cc-cd09-0410-ab3c-d52691b4dbfc