Source/WebCore/page/scrolling/ScrollingTreeNode.h
@@ -63,7 +63,7 @@ protected:
     bool hasEnabledHorizontalScrollbar() const { return m_hasEnabledHorizontalScrollbar; }
     bool hasEnabledVerticalScrollbar() const { return m_hasEnabledVerticalScrollbar; }
 
-    bool canHaveScrollbars() const { return m_horizontalScrollbarMode != ScrollbarAlwaysOff && m_verticalScrollbarMode != ScrollbarAlwaysOff; }
+    bool canHaveScrollbars() const { return m_horizontalScrollbarMode != ScrollbarAlwaysOff || m_verticalScrollbarMode != ScrollbarAlwaysOff; }
 
 private:
     ScrollingTree* m_scrollingTree;
